Commit 1 Rama IntelliJ Ok